<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asphire">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textSize="40dp"
        android:paddingTop="40dp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_button"
            android:background="#125688"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="14dp"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Or"
            android:textAlignment="center"
            android:layout_marginTop="6dp"
            android:textSize="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/newuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="35dp"
            android:text="New to AspHire?"
            android:layout_marginTop="8dp"
            android:textSize="16dp"/>

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_toRightOf="@+id/newuser"
                android:layout_marginTop="8dp"
                android:textColor="#c8e8ff"
                android:textSize="16dp"/>

        </RelativeLayout>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>