<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="110dp">

        <ImageView
            android:id="@+id/user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/user"
            android:layout_above="@+id/layout_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_toRightOf="@+id/user"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/message"
            android:layout_above="@+id/layout_number"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_toRightOf="@+id/email"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/number"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cellphone"
            android:layout_above="@+id/layout_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_number"
            android:layout_toRightOf="@+id/number"
            android:layout_below="@+id/layout_email"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_number" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/privacy"
            android:layout_above="@+id/signup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_toRightOf="@+id/password"
            android:layout_below="@+id/layout_number"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/signup"
            android:layout_below="@+id/layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:textSize="15dp"
            android:background="#0A7B78"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>